# TheEkopolitanOfficial

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
medicash/: config.py  main.py  models.py  store.py  utils.py
medicash/routers/: auth.py  cards.py  remit.py  tools.py  travel.py  txns.py
medicash/static/css/: styles.css
medicash/static/js/: app.js
medicash/templates/: index.html
