[project]
name = "medicash"
version = "0.1.0"
description = "MedICash - prepaid and card services for remittances and borderless payments"
requires-python = ">=3.10"
readme = "README.md"

[project.dependencies]
# FastAPI + server
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }

# Auth & Security
python-jose = { version = "^3.3.0" }
passlib = { version = "^1.7.4" }
pyotp = "^2.9.0"

# Data
pydantic = "^2.9.0"

# Templates
jinja2 = "^3.1.4"

# Utilities
httpx = "^0.27.2"
shortuuid = "^1.0.13"

[tool.uvicorn]
reload = true
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
